feat: add transaction get by id and enabled