@@ -1,7 +1,9 @@
 package com.tpsoares.guiafinanceiro.api.transaction;
 
-import com.tpsoares.guiafinanceiro.api.transaction.dto.TransactionInputDto;
+import com.tpsoares.guiafinanceiro.api.categoryType.CategoryTypeMapper;
+import com.tpsoares.guiafinanceiro.api.subcategoryType.SubcategoryTypeMapper;
 import com.tpsoares.guiafinanceiro.api.transaction.dto.TransactionOutputDto;
+import com.tpsoares.guiafinanceiro.api.user.UserMapper;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,10 +19,22 @@ public class TransactionMapper {
                         .transactionValue(transaction.getTransactionValue())
                         .createdAt(transaction.getCreatedAt())
                         .updatedAt(transaction.getUpdatedAt())
-                        .user(transaction.getUser())
-                        .categoryType(transaction.getCategoryType())
-                        .subcategoryType(transaction.getSubcategoryType())
+                        .user(UserMapper.toTransactionOutPutDto(transaction.getUser()))
+                        .categoryType(CategoryTypeMapper.toTransactionOutPutDto(transaction.getCategoryType()))
+                        .subcategoryType(SubcategoryTypeMapper.toTransactionOutPutDto(transaction.getSubcategoryType()))
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public static TransactionOutputDto toOutputDto(Transaction transaction) {
+        return TransactionOutputDto.builder()
+                .transactionId(transaction.getTransactionId())
+                .name(transaction.getName())
+                .transactionValue(transaction.getTransactionValue())
+                .createdAt(transaction.getCreatedAt())
+                .updatedAt(transaction.getUpdatedAt())
+                .categoryType(transaction.getCategoryType())
+                .subcategoryType(transaction.getSubcategoryType())
+                .build();
     }
 }
